# network

./: .dockerignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 20d23123c183_creation_of_tables.py  9b49dbc0b7a4_added_admin_role.py
network/: Proxy.py  User.py  __init__.py  __main__.py  authentication_middleware.py  crud.py  decryption.py  encryption.py  exceptions.py  key_generation.py  kfrags.py  main.py  models.py  reencryption.py  schemas.py  testing.py  transcoding.py
network/backend/: Proxy.py  auth_depend.py  crud.py  item_router.py  main.py  models.py  person_router.py  pre_router.py  schemas.py  share_router.py  user_router.py
network/frontend/: Admin.py  User.py
network/routers/: person_data.py
tests/: .coveragerc  prepare.py  test_auth.py  test_cli.py  test_exceptions.py  test_frontend.py  test_item.py  test_pre.py  test_share.py
