[build-system]
requires = ["pdm-backend>=2.0.6,<3.0.0", "setuptools>=68"]
build-backend = "pdm.backend"

[project]
name = "network"
dynamic = ["version"]
description = "Manage contacts, their addresses and company"
authors = [
    { name = "Yann de The", email = "ydethe@gmail.com" },
]
dependencies = [
    "aiosqlite>=0.19.0,<1.0.0",
    "fastapi~=0.92",
    "httpx~=0.23",
    "psycopg2-binary~=2.9",
    "pydantic>=1.10.5",
    "requests>=2.28.2",
    "rich~=13.3",
    "sqlalchemy[asyncio]<2",
    "typer~=0.7",
    "umbral>=0.3.0",
    "uvicorn>=0.20.0",
]
requires-python = ">=3.8,<3.12"

[project.urls]
"Bug Tracker" = "https://gitlab.com/ydethe/network"
Homepage = "https://gitlab.com/ydethe/network"
Source = "https://gitlab.com/ydethe/network"
Documentation = "https://ydethe.gitlab.io/network/network/"

[project.scripts]
network_server = "network.backend.main:tapp"

[tool.pylint.main]
ignore-patterns = ["kt_*.py"]

[tool.pylint.format]
max-line-length = 100

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100
target-version = ['py38']
force-exclude = 'kt_.*.py'

[tool.pdm.version]
source = "scm"

[tool.pdm.build]
includes = [
    "network/",
]
excludes = [
    "tests",
    "examples",
    "build",
    "dev",
    "dist",
    "mockup"
]

[tool.pdm.dev-dependencies]
dev = [
    "coverage-badge>=1.1.0",
    "docstr-coverage>=2.2.0",
    "ipython>=7.23.1",
    "pre-commit",
    "snakeviz>=2.1.2",
]
maintain = [
    "black==22.3.0",
    "blacken-docs==1.12.1",
    "git-changelog>=1.0",
]
quality = [
    "mypy>=1.2.0",
    "ruff>=0.0.246",
]
doc = [
    "pdoc3>=0.10.0",
    "pylint>=2.15.3",
]
test = [
    "pytest>=7.1.3",
    "pytest-cov>=3.0.0",
    "pytest-mock>=3.8.2",
    "pytest-instafail>=0.4.2",
    "pytest-order>=1.0.1",
    "pytest-picked>=0.4.6",
    "pytest-sugar>=0.9.5",
    "pytest-html>=3.1.1",
]

[tool.pytest.ini_options]
addopts = [
    "--html=build/htmldoc/tests/report.html",
    "--self-contained-html",
    "--junitxml=build/junit.xml",
    "--cov-config=tests/.coveragerc",
    "--cov=network",
    "--doctest-modules",
]
testpaths = [
    "tests/",
]

[tool.pdm.scripts]
site_packages = true
doc.shell = """\
    mkdir -p build/htmldoc/network
    pdoc --html --force --config latex_math=True -o build/htmldoc network
    pyreverse -s0 network -k --colorized -p network -m no --ignore=exceptions.py -d build/htmldoc
    dot -Tpng build/htmldoc/classes_network.dot -o build/htmldoc/network/classes.png
    coverage html -d build/htmldoc/coverage --rcfile=tests/.coveragerc
"""
